# django-articles

./: .gitignore  README.md  manage.py  pyproject.toml  reset.sh  ruff.toml
article-editor/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
article-editor.bu/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
article-editor.bu/jsx/: jsx-runtime.ts
article-editor.bu/src/components/: Block.css  Block.tsx  Button.css  Button.tsx  Icon.tsx  Input.tsx  SearchEntry.css  SearchEntry.tsx
article-editor.bu/src/editor/: ArticleEditor.tsx  parser.ts  plugin.ts  utils.ts
article-editor.bu/src/form/: PhotoButton.tsx  field.tsx
article-editor.bu/src/lib/: PhotoSelector.css  PhotoSelector.tsx
article-editor/jsx/: jsx-dev-runtime.ts  jsx-runtime.ts  state.ts
article-editor/src/: index.css  index.jsx  index.ts  index.tsx  style.css
article-editor/src/components/: Block.css  Block.tsx  Button.tsx  Icon.css  Icon.tsx  Input.css  Input.tsx  SearchEntry.tsx  index.ts
article-editor/src/editor/: ArticleEditor.ts  (+6 more)
articles/: admin.py  api.py  apps.py  fields.py  forms.py  models.py  parser.py  photoapi.py  schema.py  tasks.py  urls.py
articles/graphql/: __init__.py  articles.py  author.py  photos.py  sections.py  tags.py
articles/lib/: article.py  photo.py
articles/migrations/: 0001_initial.py
articles/static/: article-editor
testapp/: admin.py  apps.py  models.py  schema.py  settings.py  urls.py
testapp/migrations/: 0001_initial.py
tests/: settings.py  urls.py
(+71 files in other folders)
